updates to the example codes

--- a/examples/custom_data_example_classification.ipynb
+++ b/examples/custom_data_example_classification.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Custom Data Example"
+    "# Classification Example: synthetic data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,6 +85,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Load graphs into graph object\n",
+    "\n",
     "We now have three lists of length 100. The graphs list is composed of numpy arrays that represent the adjacency matrix of the graph. The node features list is composed of numpy arrays that contain the node information for each graph. The labels list is a list of integers that corresponds to the class label for each graph.\n",
     "\n",
     "The next step is to take this data and convert it into an appropriate format for hcga."
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,44 +105,24 @@
     "# create graph collection object\n",
     "g_c = GraphCollection()\n",
     "\n",
-    "\n",
-    "# looping over each graph and appending it to the graph collection object\n",
-    "for i,A in enumerate(graphs):\n",
-    "    \n",
-    "    # generating a sparse matrix\n",
-    "    sA = sc.sparse.coo_matrix(A)\n",
-    "    \n",
-    "    # extracting edge list from scipy sparse matrix\n",
-    "    edges = np.array([sA.row,sA.col,sA.data]).T\n",
-    "    \n",
-    "    # passing edge list to pandas dataframe\n",
-    "    edges_df = pd.DataFrame(edges, columns = ['start_node', 'end_node', 'weight'])\n",
-    "\n",
-    "    # creating node ids based on size of adjancency matrix\n",
-    "    nodes = np.arange(0,A.shape[0])\n",
-    "    \n",
-    "    # loading node ids into dataframe\n",
-    "    nodes_df = pd.DataFrame(index=nodes)\n",
-    "\n",
-    "    # each node should have the same number of node features across all graphs\n",
-    "    # converting node features array to list such that each node is assigned a list.\n",
-    "    nodes_df['attributes'] = node_features[i].tolist()\n",
-    "\n",
-    "    # extracting graph label from labels\n",
-    "    graph_label = [labels[i]]\n",
-    "    \n",
-    "    # create a single graph object\n",
-    "    graph = Graph(nodes_df, edges_df, graph_label)\n",
-    "\n",
-    "    # add new graph to the collection\n",
-    "    g_c.add_graph(graph)\n"
+    "# add graphs, node features and labels to the object\n",
+    "g_c.add_graph_list(graphs,node_features,labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 100 graphs\n",
+      "There are 3 features per node\n"
+     ]
+    }
+   ],
    "source": [
     "# perform some sanity checks\n",
     "\n",
@@ -150,27 +132,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# we can save this if we want to and run everything from the command line\n",
     "from hcga.io import save_dataset\n",
     "\n",
-    "save_dataset(g_c, 'custom_dataset_classification', folder='./datasets')"
+    "save_dataset(g_c, 'custom_dataset_classification', folder='./datasets/custom_dataset_classification')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -188,18 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from hcga.io import load_dataset\n",
-    "\n",
-    "graphs = load_dataset('./datasets/custom_dataset_classification.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,17 +168,39 @@
     "# define an object\n",
     "h = Hcga()\n",
     "\n",
-    "#assigning the graphs field to the recently created dataset\n",
-    "h.graphs = graphs"
+    "# load previously saved dataset\n",
+    "h.load_data('./datasets/custom_dataset_classification/custom_dataset_classification.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:hcga.extraction:Extracting features from 100 graphs (we disabled 0 graphs).\n",
+      "INFO:hcga.extraction:Computing features for 100 graphs:\n",
+      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=4)]: Done   5 tasks      | elapsed:    5.6s\n",
+      "[Parallel(n_jobs=4)]: Done  10 tasks      | elapsed:    8.4s\n",
+      "[Parallel(n_jobs=4)]: Done  17 tasks      | elapsed:   11.2s\n",
+      "[Parallel(n_jobs=4)]: Done  24 tasks      | elapsed:   13.6s\n",
+      "[Parallel(n_jobs=4)]: Done  33 tasks      | elapsed:   17.3s\n",
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:   20.8s\n",
+      "[Parallel(n_jobs=4)]: Done  53 tasks      | elapsed:   24.8s\n",
+      "[Parallel(n_jobs=4)]: Done  64 tasks      | elapsed:   28.3s\n",
+      "[Parallel(n_jobs=4)]: Done  77 tasks      | elapsed:   33.3s\n",
+      "[Parallel(n_jobs=4)]: Done  90 tasks      | elapsed:   37.9s\n",
+      "[Parallel(n_jobs=4)]: Done 100 out of 100 | elapsed:   41.3s finished\n",
+      "INFO:hcga.extraction:1093 feature extracted.\n"
+     ]
+    }
+   ],
    "source": [
     "# extracting all features here\n",
     "h.extract(mode='fast', n_workers=4, timeout=20)\n",
@@ -237,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,13 +229,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:hcga.analysis:... Using Xgboost classifier ...\n",
+      "INFO:hcga.analysis:1093 total features\n",
+      "INFO:hcga.analysis:0 graphs were removed for more than 0.3 fraction of bad features\n",
+      "INFO:hcga.analysis:1018 valid features\n",
+      "INFO:hcga.analysis:1018 with interpretability 1\n",
+      "INFO:hcga.analysis:Counts of graphs/label: \n",
+      "0.0    50\n",
+      "1.0    50\n",
+      "Name: label, dtype: int64\n",
+      "INFO:hcga.analysis:Using 10 splits\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Accuracy: 0.96 +/- 0.049\n",
+      "INFO:hcga.analysis:Now using a reduced set of 100 features with < 0.9 correlation.\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 0.8 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
+      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
+      "INFO:hcga.analysis:Accuracy with reduced set: 0.96 +/- 0.066\n",
+      "INFO:hcga.plotting:Using reduced features for plotting.\n",
+      "INFO:hcga.plotting:Plot bar ranking\n",
+      "INFO:hcga.plotting:Plot dot summary\n",
+      "INFO:hcga.plotting:Plot feature correlations\n",
+      "INFO:hcga.plotting:Plot dendrogram\n",
+      "INFO:hcga.plotting:Plot shap violin\n",
+      "INFO:hcga.plotting:Plot feature summaries\n"
+     ]
+    }
+   ],
+   "source": [
+    "# implement a classification analyse of the features\n",
+    "\n",
+    "h.analyse_features(feature_file='./results/custom_dataset_classification/all_features.pkl',results_folder='./results/custom_dataset_classification')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# implement a classification analyse of the features\n",
-    "h.analyse_features(feature_file='./results/custom_dataset_classification/all_features.pkl',results_folder='./results/custom_dataset_classification')\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
