--- a/examples/custom_data_example_regression.ipynb
+++ b/examples/custom_data_example_regression.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,23 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We now have three lists of length 100. The graphs list is composed of numpy arrays that represent the adjacency matrix of the graph. The node features list is composed of numpy arrays that contain the node information for each graph. The labels list is a list of integers that corresponds to the class label for each graph.\n",
-    "\n",
-    "The next step is to take this data and convert it into an appropriate format for hcga."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,44 +76,24 @@
     "# create graph collection object\n",
     "g_c = GraphCollection()\n",
     "\n",
-    "\n",
-    "# looping over each graph and appending it to the graph collection object\n",
-    "for i,A in enumerate(graphs):\n",
-    "    \n",
-    "    # generating a sparse matrix\n",
-    "    sA = sc.sparse.coo_matrix(A)\n",
-    "    \n",
-    "    # extracting edge list from scipy sparse matrix\n",
-    "    edges = np.array([sA.row,sA.col,sA.data]).T\n",
-    "    \n",
-    "    # passing edge list to pandas dataframe\n",
-    "    edges_df = pd.DataFrame(edges, columns = ['start_node', 'end_node', 'weight'])\n",
-    "\n",
-    "    # creating node ids based on size of adjancency matrix\n",
-    "    nodes = np.arange(0,A.shape[0])\n",
-    "    \n",
-    "    # loading node ids into dataframe\n",
-    "    nodes_df = pd.DataFrame(index=nodes)\n",
-    "\n",
-    "    # each node should have the same number of node features across all graphs\n",
-    "    # converting node features array to list such that each node is assigned a list.\n",
-    "    nodes_df['attributes'] = node_features[i].tolist()\n",
-    "\n",
-    "    # extracting graph label from labels\n",
-    "    graph_label = [labels[i]]\n",
-    "    \n",
-    "    # create a single graph object\n",
-    "    graph = Graph(nodes_df, edges_df, graph_label, 'p_edge')\n",
-    "\n",
-    "    # add new graph to the collection\n",
-    "    g_c.add_graph(graph)\n"
+    "# add graphs, node features and labels to the object\n",
+    "g_c.add_graph_list(graphs,node_features,labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 50 graphs\n",
+      "There are 3 features per node\n"
+     ]
+    }
+   ],
    "source": [
     "# perform some sanity checks\n",
     "\n",
@@ -139,20 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# we can save this if we want to and run everything from the command line\n",
     "from hcga.io import save_dataset\n",
     "\n",
-    "save_dataset(g_c, 'custom_dataset_regression', folder='./datasets')"
+    "save_dataset(g_c, 'custom_dataset_regression', folder='./datasets/custom_dataset_regression')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -170,18 +129,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from hcga.io import load_dataset\n",
     "\n",
-    "graphs = load_dataset('./datasets/custom_dataset_regression.pkl')"
+    "graphs = load_dataset('./datasets/custom_dataset_regression/custom_dataset_regression.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,11 +156,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:hcga.extraction:Extracting features from 50 graphs (we disabled 0 graphs).\n",
+      "INFO:hcga.extraction:Computing features for 50 graphs:\n",
+      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=4)]: Done   5 tasks      | elapsed:    7.1s\n",
+      "[Parallel(n_jobs=4)]: Done  10 tasks      | elapsed:   17.4s\n",
+      "[Parallel(n_jobs=4)]: Done  17 tasks      | elapsed:   24.5s\n",
+      "[Parallel(n_jobs=4)]: Done  24 tasks      | elapsed:   31.9s\n",
+      "[Parallel(n_jobs=4)]: Done  33 tasks      | elapsed:   38.0s\n",
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:   55.6s\n",
+      "[Parallel(n_jobs=4)]: Done  50 out of  50 | elapsed:  1.2min finished\n",
+      "INFO:hcga.extraction:1093 feature extracted.\n"
+     ]
+    }
+   ],
    "source": [
     "# extracting all features here\n",
     "h.extract(mode='fast',n_workers=4,timeout=20)\n",
@@ -210,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,15 +215,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:numexpr.utils:Note: NumExpr detected 12 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.\n",
+      "INFO:numexpr.utils:NumExpr defaulting to 8 threads.\n",
+      "INFO:hcga.analysis:... Using Xgboost regressor ...\n",
+      "INFO:hcga.analysis:1093 total features\n",
+      "INFO:hcga.analysis:0 graphs were removed for more than 0.3 fraction of bad features\n",
+      "INFO:hcga.analysis:1001 valid features\n",
+      "INFO:hcga.analysis:1001 with interpretability 1\n",
+      "INFO:hcga.analysis:Counts of graphs/label: \n",
+      "0.74    3\n",
+      "0.60    2\n",
+      "0.81    2\n",
+      "0.11    2\n",
+      "0.87    2\n",
+      "0.68    2\n",
+      "0.26    2\n",
+      "0.69    1\n",
+      "0.59    1\n",
+      "0.57    1\n",
+      "0.17    1\n",
+      "0.48    1\n",
+      "0.88    1\n",
+      "0.76    1\n",
+      "0.58    1\n",
+      "0.84    1\n",
+      "0.24    1\n",
+      "0.30    1\n",
+      "0.19    1\n",
+      "0.49    1\n",
+      "0.52    1\n",
+      "0.63    1\n",
+      "0.56    1\n",
+      "0.15    1\n",
+      "0.53    1\n",
+      "0.75    1\n",
+      "0.41    1\n",
+      "0.29    1\n",
+      "0.31    1\n",
+      "0.32    1\n",
+      "0.09    1\n",
+      "0.40    1\n",
+      "0.35    1\n",
+      "0.37    1\n",
+      "0.83    1\n",
+      "0.73    1\n",
+      "0.45    1\n",
+      "0.10    1\n",
+      "0.07    1\n",
+      "0.42    1\n",
+      "0.67    1\n",
+      "0.27    1\n",
+      "Name: label, dtype: int64\n",
+      "INFO:hcga.analysis:Using 2 splits\n",
+      "INFO:hcga.analysis:Mean Absolute Error: --- 0.07 ---\n",
+      "INFO:hcga.analysis:Mean Absolute Error: --- 0.036 ---\n",
+      "INFO:hcga.analysis:Mean absolute error: 0.053 +/- 0.017\n",
+      "INFO:hcga.analysis:Now using a reduced set of 100 features with < 0.9 correlation.\n",
+      "INFO:hcga.analysis:Mean Absolute Error: --- 0.03 ---\n",
+      "INFO:hcga.analysis:Mean Absolute Error: --- 0.038 ---\n",
+      "INFO:hcga.analysis:Mean Absolute Error with reduced set: 0.034 +/- 0.004\n",
+      "INFO:hcga.plotting:Using reduced features for plotting.\n",
+      "INFO:hcga.plotting:Plot bar ranking\n",
+      "INFO:hcga.plotting:Plot dot summary\n",
+      "INFO:hcga.plotting:Plot feature correlations\n",
+      "INFO:hcga.plotting:Plot dendrogram\n",
+      "INFO:hcga.plotting:Plot trend\n",
+      "INFO:hcga.plotting:Plot feature summaries\n"
+     ]
+    }
+   ],
    "source": [
     "# implement a classification analyse of the features\n",
     "h.analyse_features(feature_file='./results/custom_dataset_regression/all_features.pkl',\n",
     "                   analysis_type='regression',\n",
     "                   results_folder='./results/custom_dataset_regression')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
