--- a/examples/notebooks/custom_data_example_classification.ipynb
+++ b/examples/notebooks/custom_data_example_classification.ipynb
@@ -96,7 +96,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'hcga'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-47342e95c69d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# converting this data into the format required for hcga\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mhcga\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGraph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGraphCollection\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# create graph collection object\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'hcga'"
+     ]
+    }
+   ],
    "source": [
     "# converting this data into the format required for hcga\n",
     "\n",
@@ -111,18 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 100 graphs\n",
-      "There are 3 features per node\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# perform some sanity checks\n",
     "\n",
@@ -132,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,33 +177,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:hcga.extraction:Extracting features from 100 graphs (we disabled 0 graphs).\n",
-      "INFO:hcga.extraction:Computing features for 100 graphs:\n",
-      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done   5 tasks      | elapsed:    5.6s\n",
-      "[Parallel(n_jobs=4)]: Done  10 tasks      | elapsed:    8.4s\n",
-      "[Parallel(n_jobs=4)]: Done  17 tasks      | elapsed:   11.2s\n",
-      "[Parallel(n_jobs=4)]: Done  24 tasks      | elapsed:   13.6s\n",
-      "[Parallel(n_jobs=4)]: Done  33 tasks      | elapsed:   17.3s\n",
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:   20.8s\n",
-      "[Parallel(n_jobs=4)]: Done  53 tasks      | elapsed:   24.8s\n",
-      "[Parallel(n_jobs=4)]: Done  64 tasks      | elapsed:   28.3s\n",
-      "[Parallel(n_jobs=4)]: Done  77 tasks      | elapsed:   33.3s\n",
-      "[Parallel(n_jobs=4)]: Done  90 tasks      | elapsed:   37.9s\n",
-      "[Parallel(n_jobs=4)]: Done 100 out of 100 | elapsed:   41.3s finished\n",
-      "INFO:hcga.extraction:1093 feature extracted.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# extracting all features here\n",
     "h.extract(mode='fast', n_workers=4, timeout=20)\n",
@@ -218,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,56 +210,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:hcga.analysis:... Using Xgboost classifier ...\n",
-      "INFO:hcga.analysis:1093 total features\n",
-      "INFO:hcga.analysis:0 graphs were removed for more than 0.3 fraction of bad features\n",
-      "INFO:hcga.analysis:1018 valid features\n",
-      "INFO:hcga.analysis:1018 with interpretability 1\n",
-      "INFO:hcga.analysis:Counts of graphs/label: \n",
-      "0.0    50\n",
-      "1.0    50\n",
-      "Name: label, dtype: int64\n",
-      "INFO:hcga.analysis:Using 10 splits\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Accuracy: 0.96 +/- 0.049\n",
-      "INFO:hcga.analysis:Now using a reduced set of 100 features with < 0.9 correlation.\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 0.8 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Accuracy with reduced set: 0.96 +/- 0.066\n",
-      "INFO:hcga.plotting:Using reduced features for plotting.\n",
-      "INFO:hcga.plotting:Plot bar ranking\n",
-      "INFO:hcga.plotting:Plot dot summary\n",
-      "INFO:hcga.plotting:Plot feature correlations\n",
-      "INFO:hcga.plotting:Plot dendrogram\n",
-      "INFO:hcga.plotting:Plot shap violin\n",
-      "INFO:hcga.plotting:Plot feature summaries\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# implement a classification analyse of the features\n",
     "\n",
@@ -295,9 +229,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base3",
    "language": "python",
-   "name": "python3"
+   "name": "base3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -309,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
